--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -12,7 +12,6 @@
     "dependencies": {
         "@azure/arm-iotcentral": "^6.0.0",
         "@azure/identity": "^2.0.4",
-        "azure-arm-resource": "^7.3.0",
-        "ms-rest-azure": "^3.0.0"
+        "@azure/arm-resources": "^5.0.0"
     }
 }
