--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,3 +1,4 @@
-azure-cli-core==2.5.1
-azure-mgmt-iotcentral==4.1.0
+azure-cli-core==2.35.0
+azure-mgmt-iotcentral==10.0.0b1
 azure-common==1.1.26
+azure-identity==1.9.0
